Arrays as inputs/outputs work

--- a/src/global_launch/config/integration/example.yaml
+++ b/src/global_launch/config/integration/example.yaml
@@ -1,54 +1,74 @@
 required_packages:
-    - name: boat_simulator
-      configs:
-    - name: network_systems
-      configs:
-        - all_disable.yaml
-        - example/example_en.yaml
-        - mock_ais/mock_ais_en_default.yaml
+  - name: local_pathfinding
+    configs:
+  - name: network_systems
+    configs:
+      - all_disable.yaml
+      - example/example_en.yaml
+      - mock_ais/mock_ais_en_default.yaml
 
 inputs:
-    - type: ROS
-      name: cached_fib_in
-      data:
-        dtype: uint64
-        val: 6
-    - type: ROS
-      name: mock_gps
-      data:
-        dtype: GPS
-        lat_lon:
-            dtype: HelperLatLon
-            latitude:
-                dtype: float32
-                val: 1
-            longitude:
-                dtype: float32
-                val: -1
-        speed:
-            dtype: HelperSpeed
-            speed:
-                dtype: float32
-                val: 5
-        heading:
-            dtype: HelperHeading
-            heading:
-                dtype: float32
-                val: 180
+  - type: ROS
+    name: cached_fib_in
+    data:
+      dtype: uint64
+      val: 6
+  - type: ROS
+    name: mock_gps
+    data:
+      dtype: GPS
+      lat_lon:
+          dtype: HelperLatLon
+          latitude:
+              dtype: float32
+              val: 1
+          longitude:
+              dtype: float32
+              val: -1
+      speed:
+          dtype: HelperSpeed
+          speed:
+              dtype: float32
+              val: 5
+      heading:
+          dtype: HelperHeading
+          heading:
+              dtype: float32
+              val: 180
+  # Global Path used to test list datatype parsing, it's not actually monitored in this example
+  - type: ROS
+    name: global_path
+    data:
+      dtype: Path
+      waypoints:
+        - dtype: HelperLatLon
+          latitude:
+              dtype: float32
+              val: 2
+          longitude:
+              dtype: float32
+              val: -2
+        - dtype: HelperLatLon
+          latitude:
+              dtype: float32
+              val: 3
+          longitude:
+              dtype: float32
+              val: -3
 
 expected_outputs:
-    - type: ROS
-      name: cached_fib_out
-      data:
-        dtype: uint64
-        val: 5
-    - type: ROS
-      name: cached_fib_in
-      data:
-        dtype: uint64
-        val: 6
-    - type: ROS
-      name: ais_ships
-      data:
-        dtype: AISShips
-        DONT_CARE: True
+  - type: ROS
+    name: cached_fib_out
+    data:
+      dtype: uint64
+      val: 5
+  - type: ROS
+    name: cached_fib_in
+    data:
+      dtype: uint64
+      val: 6
+  - type: ROS
+    name: mock_ais_ships
+    data:
+      dtype: AISShips
+      DONT_CARE: True
