--- a/.github/workflows/test_definitions.yml
+++ b/.github/workflows/test_definitions.yml
@@ -79,7 +79,7 @@ jobs:
     - name: Test
       uses: ./.github/actions/test/
       with:
-        disable_vcs: ${{ inputs.repository != 'sailbot_workspace' }}
+        disable_vcs: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
 
   ament-lint:
     strategy:
@@ -108,7 +108,7 @@ jobs:
       uses: ./.github/actions/ament-lint/
       with:
         linter: ${{ matrix.linter }}
-        disable_vcs: ${{ inputs.repository != 'sailbot_workspace' }}
+        disable_vcs: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
 
   clang-tidy:
     runs-on: ubuntu-latest
@@ -130,7 +130,7 @@ jobs:
     - name: Run linter
       uses: ./.github/actions/clang-tidy/
       with:
-        disable_vcs: ${{ inputs.repository != 'sailbot_workspace' }}
+        disable_vcs: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository != 'custom_interfaces' }}
 
   # https://github.com/nosborn/github-action-markdown-cli
   markdownlint:
