--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -9,6 +9,9 @@ mgp_main:
    ros__parameters:
       global_path_filepath: "/workspaces/sailbot_workspace/src/local_pathfinding/global_paths/mock_global_path.csv"
       interval_spacing: 30.0
+      write: false
+      gps_threshold: 1.5
+      force: false
 
 # boat_simulator parameters
 low_level_control_node:
