--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -13,6 +13,10 @@ mgp_main:
       gps_threshold: 1.5
       force: false
 
+navigate_main:
+   ros__parameters:
+      path_planner: "rrtstar"
+
 # boat_simulator parameters
 low_level_control_node:
    ros__parameters:
