Added ros parameter in globals.yaml file and edited readme (#232)
* Added ros parameter in globals.yaml file and edited readme

* Updated readme to fix linter errors

* changes according to pr comments

* Alphabetized the planner list

--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -12,6 +12,9 @@ mgp_main:
       write: false
       gps_threshold: 1.5
       force: false
+navigate_main:
+   ros__parameters:
+      path_planner: "rrtstar"
 
 # boat_simulator parameters
 low_level_control_node:
