--- a/src/global_launch/config/globals.yaml
+++ b/src/global_launch/config/globals.yaml
@@ -54,3 +54,11 @@ physics_engine_node:
             corr_xy: 0.
          constant_params:
             value: [1.0, 0.0]
+data_collection_node:
+   ros__parameters:
+      file_name: 'ros_data_collection'
+      qos_depth: 10
+      topics: ['/mock_gps', 'GPS', '/mock_wind_sensors', 'WindSensors']
+      bag: false
+      json: true
+      write_period_sec: 0.5
