--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -85,6 +85,7 @@
 				"ms-vsliveshare.vsliveshare",
 				"ms-python.mypy-type-checker",
 				"njpwerner.autodocstring",
+				"randomfractalsinc.geo-data-viewer",
 				"stevejpurves.cucumber",
 				"streetsidesoftware.code-spell-checker",
 				"vscode-icons-team.vscode-icons",
