--- a/src/integration_tests/package.xml
+++ b/src/integration_tests/package.xml
@@ -7,8 +7,12 @@
   <maintainer email="henryhuang2001@gmail.com">Henry Huang</maintainer>
   <license>MIT</license>
 
+  <!--ROS Dependencies-->
   <exec_depend>rclpy</exec_depend>
   <exec_depend>custom_interfaces</exec_depend>
+
+  <!--Python Dependencies-->
+  <exec_depend>python3-pyyaml-types-pip</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
