Checkout net when running local pathfinding

--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -23,6 +23,13 @@ runs:
           repository: UBCSailbot/custom_interfaces
           path: src/custom_interfaces
 
+    - name: Checkout network_systems ROS package
+      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository == 'local_pathfinding' }}
+      uses: actions/checkout@v4
+      with:
+          repository: UBCSailbot/network_systems
+          path: src/network_systems
+
     - name: Checkout virtual_iridium repository
       if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository == 'network_systems' }}
       uses: actions/checkout@v4
