--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -9,6 +9,12 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Setup Code
+      shell: bash
+      run: |
+        docker-compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && ./setup.sh"
+        docker-compose -f .devcontainer/docker-compose.yml down
+
     - name: Build Containers
       shell: bash
       run: docker-compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml build
