--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -12,21 +12,17 @@ runs:
     - name: Setup Code
       shell: bash
       run: |
-        docker-compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && ./setup.sh"
-        docker-compose -f .devcontainer/docker-compose.yml down
-
-    - name: Build Containers
-      shell: bash
-      run: docker-compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml build
+        docker compose -f .devcontainer/docker-compose.yml up -d
+        docker compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && ./setup.sh"
 
     - name: Run Containers
       shell: bash
-      run: docker-compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml up -d
+      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml up -d
 
     - name: Print Website Logs
       shell: bash
-      run: docker-compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml logs website
+      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml logs website
 
     - name: Run Tests
       shell: bash
-      run: docker-compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/test/run.sh"
+      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/test/run.sh"
