--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -9,6 +9,7 @@ inputs:
 runs:
   using: "composite"
   steps:
+    # TODO: remove once monorepo
     - name: Setup Code
       shell: bash
       run: |
@@ -17,12 +18,8 @@ runs:
 
     - name: Run Containers
       shell: bash
-      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml up -d
-
-    - name: Print Website Logs
-      shell: bash
-      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml logs website
+      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.website.yml up -d
 
     - name: Run Tests
       shell: bash
-      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.db.yml -f .devcontainer/docker-compose.website.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/test/run.sh"
+      run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.website.yml exec -T sailbot-workspace /bin/bash -c "export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/test/run.sh"
