Checkout website repo in local pathfinding CI

--- a/.github/actions/checkout/action.yml
+++ b/.github/actions/checkout/action.yml
@@ -30,6 +30,13 @@ runs:
           repository: UBCSailbot/network_systems
           path: src/network_systems
 
+    - name: Checkout website ROS package
+      if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository == 'local_pathfinding' }}
+      uses: actions/checkout@v4
+      with:
+          repository: UBCSailbot/website
+          path: src/website
+
     - name: Checkout virtual_iridium repository
       if: ${{ inputs.repository != 'sailbot_workspace' && inputs.repository == 'network_systems' }}
       uses: actions/checkout@v4
