Integrate website into tests (#235)
* Run website by default

* Run website by default in CI

* Pin mongodb major version

* Clean and populate sailbot_db before running tests

* Checkout net when running local pathfinding

* Print website logs

* Run setup script first

* Run container first

* Cleanup

* Run setup automatically after rebuild

* Forward website port in compose file

* Checkout website repo in local pathfinding CI

* Another missing repo for local pathfinding ci

* Revert local pathfinding branch

---------

Co-authored-by: Sean Donaghy <118148642+SPDonaghy@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,14 +3,12 @@
 	"name": "Sailbot Workspace",
 	"dockerComposeFile": [
 		// Uncomment the files containing the programs you need
-		"docker-compose.db.yml", // mongodb
 		// "docker-compose.docs.yml", // docs
-		// "docker-compose.website.yml", // website
+		"docker-compose.website.yml", // website
 
 		"docker-compose.yml"
 	],
 	"forwardPorts": [
-		3005, // website
 		8000  // docs
 	],
 	"service": "sailbot-workspace",
@@ -19,6 +17,7 @@
 	"containerEnv": {
 		"LIBGL_ALWAYS_SOFTWARE": "1" // Needed for software rendering of opengl
 	},
+	"postCreateCommand": "./setup.sh",
 	// Set *default* container specific settings.json values on container create.
 	"customizations": {
 		"codespaces": {
