--- a/.github/actions/ament-lint/action.yml
+++ b/.github/actions/ament-lint/action.yml
@@ -5,9 +5,6 @@ inputs:
   linter:
     description: 'The linter to run'
     required: true
-  disable_vcs:
-    description: 'Whether to disable VCS cloning all repositories'
-    required: true
 
 runs:
   using: "composite"
@@ -22,4 +19,4 @@ runs:
 
     - name: Run Tests
       shell: bash
-      run: docker compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export LINTER=${{ inputs.linter}} && export DISABLE_VCS=${{ inputs.disable_vcs }} && cd /workspaces/sailbot_workspace && .github/actions/ament-lint/run.sh"
+      run: docker compose -f .devcontainer/docker-compose.yml exec -T sailbot-workspace /bin/bash -c "export LINTER=${{ inputs.linter}} && cd /workspaces/sailbot_workspace && .github/actions/ament-lint/run.sh"
