--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,34 +1,43 @@
-name: Tests
+name: Docs Site
 
 on:
   push:
     branches:
       - main
   pull_request:
-    # docs only: default types + closed
+    # default types and closed
     types: [opened, synchronize, reopened, closed]
-  # docs only: markdown linters run every Saturday at 11:00am UTC
-  # to check for links that have died
-  schedule:
-    - cron: '0 11 * * 6'
   workflow_dispatch:
 
 jobs:
-  # CI for all UBCSailbot repositories defined in one place
-  # Runs another workflow: https://docs.github.com/en/actions/using-workflows/reusing-workflows#calling-a-reusable-workflow
-  test-definitions:
-    # sailbot_workspace: use locally-defined file
-    # other repositories: set to UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@<release>
-    uses: UBCSailbot/sailbot_workspace/.github/workflows/test_definitions.yml@v1.7.0
-    # see https://github.com/UBCSailbot/sailbot_workspace/blob/main/.github/workflows/test_definitions.yml
-    # for documentation on the inputs and secrets below
-    with:
-      repository: ${{ github.event.repository.name }}
-      ros-ci: false
-      clang-tidy: false
-      rebuild-docs: false
-    secrets:
-      PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+  # https://github.com/nosborn/github-action-markdown-cli
+  markdownlint:
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    steps:
+    - name: Checkout workspace
+      uses: actions/checkout@v4
+
+    - name: Run linter
+      uses: nosborn/github-action-markdown-cli@v3.3.0
+      with:
+        config_file: .markdownlint.json
+        files: .
+        dot: true
+
+  # https://github.com/gaurav-nelson/github-action-markdown-link-check
+  markdown-link-check:
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    steps:
+    - name: Checkout workspace
+      uses: actions/checkout@v4
+
+    - name: Run linter
+      uses: gaurav-nelson/github-action-markdown-link-check@v1
+      with:
+        config-file: .markdown-link-check.json
+        folder-path: .
 
   markdown-link-redirection-check:
     runs-on: ubuntu-latest
@@ -43,7 +52,7 @@ jobs:
           python-version: "3.10"
 
       - name: Check links to external sites redirect to a new tab
-        uses: ./.github/actions/lint/
+        uses: ./.github/actions/docs-lint/
         env:
           ROOT: './docs/'
 
@@ -78,7 +87,7 @@ jobs:
     name: Deploy Docs version
     runs-on: ubuntu-latest
     if: github.event_name != 'pull_request' || github.event.action != 'closed'
-    needs: [test-definitions, markdown-link-redirection-check, docs-build]
+    needs: [markdownlint, markdown-link-check, markdown-link-redirection-check, docs-build]
     permissions:
       contents: write
     steps:
