Migrate docs to sailbot workspace (#248)
* Do not clone docs repo

* Remove docs repo codespace permissions

* Add docs files at PR #204

* Migrate codeowners

* Migrate release.yml

* Migrate docs CI

* Move docs to /docs/

* Migrate docs ci to docs.yml

* Update docker files

* Update deprecated mkdocs extensions

* Cleanup and merge vscode settings

* Move docs readme to inside docs site

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,12 @@ __pycache__/
 
 # data collection node output
 /boat_simulator_output/
+
+# docs
+# Python virtual environment
+.venv/
+venv/
+# Social cards
+.cache/
+# Build
+site/
