--- a/.devcontainer/docker-compose.docs.yml
+++ b/.devcontainer/docker-compose.docs.yml
@@ -8,7 +8,7 @@ services:
       context: ..
       dockerfile: .devcontainer/docs/docs.Dockerfile
     volumes:
-      - ../src/docs:/docs:cached
+      - ..:/docs:cached
 
     # Runs on the same network as the workspace container, allows "forwardPorts" in devcontainer.json function.
     network_mode: service:sailbot-workspace
