--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project information
 site_name: UBCSailbot Software Team Docs
-site_url: https://UBCSailbot.github.io/docs/
+site_url: https://UBCSailbot.github.io/sailbot_workspace/
 site_author: UBCSailbot Software Team
 
 # Repository
