Migrate notebooks infrastructure

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,5 +7,14 @@
 # review when someone opens a pull request.
 * @patrick-5546
 
+# boat_simulator
+/notebooks/boat_simulator @DFriend01
+
+# controller
+/notebooks/controller @DFriend01
+
 # docs
 /docs/ @DFriend01
+
+# local_pathfinding
+/notebooks/local_pathfinding @jamenkaye
