Migrate boat simulator infrastructure

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,6 +9,7 @@
 
 # boat_simulator
 /notebooks/boat_simulator @DFriend01
+/src/boat_simulator @DFriend01
 
 # controller
 /notebooks/controller @DFriend01
