--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Test
-      uses: ./.github/actions/test/
+      uses: ./.github/actions/run-in-container/
+      with:
+        script: 'test'
+        run-website: 'true'
 
   ament-lint:
     strategy:
@@ -33,8 +36,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run linter
-      uses: ./.github/actions/ament-lint/
+      uses: ./.github/actions/run-in-container/
       with:
+        script: 'ament-lint'
         linter: ${{ matrix.linter }}
 
   clang-tidy:
@@ -45,4 +49,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Run linter
-      uses: ./.github/actions/clang-tidy/
+      uses: ./.github/actions/run-in-container/
+      with:
+        script: 'clang-tidy'
