--- a/src/network_systems/projects/remote_transceiver/CMakeLists.txt
+++ b/src/network_systems/projects/remote_transceiver/CMakeLists.txt
@@ -4,21 +4,20 @@ set(link_libs
     ${PROTOBUF_LINK_LIBS}
     mongo::mongocxx_shared
     mongo::bsoncxx_shared
-    sailbot_db
 )
 
 set(inc_dirs
     ${PROTOBUF_INCLUDE_PATH}
     ${LIBMONGOCXX_INCLUDE_DIRS}
     ${LIBBSONCXX_INCLUDE_DIRS}
-    ${SAILBOT_DB_INC_DIR}
-)
-
-set(compile_defs
 )
 
 set(srcs
+    ${CMAKE_CURRENT_LIST_DIR}/src/sailbot_db.cpp
     ${CMAKE_CURRENT_LIST_DIR}/src/remote_transceiver.cpp
+)
+
+set(compile_defs
 )
 
 set(bin_srcs
