--- a/src/integration_tests/package.xml
+++ b/src/integration_tests/package.xml
@@ -9,6 +9,7 @@
 
   <exec_depend>rclpy</exec_depend>
   <exec_depend>custom_interfaces</exec_depend>
+  <exec_depend>python3-pymongo</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
