--- a/src/integration_tests/package.xml
+++ b/src/integration_tests/package.xml
@@ -10,6 +10,7 @@
   <!--ROS Dependencies-->
   <exec_depend>rclpy</exec_depend>
   <exec_depend>custom_interfaces</exec_depend>
+  <exec_depend>python3-pymongo</exec_depend>
 
   <!--Python Dependencies-->
   <exec_depend>python3-pyyaml-types-pip</exec_depend>
