--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,15 +9,15 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-    # Create a group of dependencies to be updated together in one pull request
-    groups:
-       # Specify a name for the group, which will be used in pull request titles
-       # and branch names
-       gh-actions:
-          # Define patterns to include dependencies in the group (based on
-          # dependency name)
-          patterns:
-            # - "rubocop" # A single dependency name
-            # - "rspec*"  # A wildcard string that matches multiple dependency names
-            - "*"       # A wildcard that matches all dependencies in the package
-                        # ecosystem. Note: using "*" may open a large pull request
+    # # Create a group of dependencies to be updated together in one pull request
+    # groups:
+    #    # Specify a name for the group, which will be used in pull request titles
+    #    # and branch names
+    #    gh-actions:
+    #       # Define patterns to include dependencies in the group (based on
+    #       # dependency name)
+    #       patterns:
+    #         # - "rubocop" # A single dependency name
+    #         # - "rspec*"  # A wildcard string that matches multiple dependency names
+    #         - "*"       # A wildcard that matches all dependencies in the package
+    #                     # ecosystem. Note: using "*" may open a large pull request
