--- a/src/boat_simulator/package.xml
+++ b/src/boat_simulator/package.xml
@@ -16,6 +16,7 @@
   <exec_depend>custom_interfaces</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>rosidl_parser</exec_depend>
+  <exec_depend>python3-matplotlib</exec_depend>
 
   <!-- Python Dependencies -->
   <exec_depend>python3-numpy</exec_depend>
