--- a/src/local_pathfinding/.gitignore
+++ b/src/local_pathfinding/.gitignore
@@ -6,3 +6,7 @@ __pycache__/
 # global paths with exceptions
 /global_paths/*.csv
 !/global_paths/mock_global_path.csv
+
+# land data files
+/land/netcdf
+/land/shp
