script test passed

--- a/src/local_pathfinding/requirements.txt
+++ b/src/local_pathfinding/requirements.txt
@@ -6,3 +6,14 @@ flask
 
 # test/test_obstacles.py
 plotly
+
+# land_polygon_etl.py
+geopandas
+pandas
+scikit-learn
+alphashape
+xarray
+fiona
+tqdm
+netcdf4
+scipy>=1.12
