--- a/src/network_systems/projects/remote_transceiver/CMakeLists.txt
+++ b/src/network_systems/projects/remote_transceiver/CMakeLists.txt
@@ -14,7 +14,8 @@ set(inc_dirs
     ${SAILBOT_DB_INC_DIR}
 )
 
-set(compile_defs
+set(srcs
+    ${CMAKE_CURRENT_LIST_DIR}/src/remote_transceiver.cpp
 )
 
 set(srcs
