Migrate Package Specific Dependencies from Image to package.xml (#244)
* removed local path python deps

* plotly and flask should remain in the image as they are not needed
by ros nodes

* updated base image tag, rebuild when image ready

* combined pip3 installs together

* changed image tag

* update local_path branch to test

* Migrate other package-specific dependencies

* Move ros log configuration to bashrc script

* move rapidyaml to local-base

* Update tag

* Install python packages last

* set local_pathfinding branch back to main in .repos

* migrated 3 network deps to package

* updated image tag

---------

Co-authored-by: Patrick Creighton <pcreighton429@gmail.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:fix-building-pre-base
+FROM ghcr.io/ubcsailbot/sailbot_workspace/dev:moved-network-deps
 
 # Copy configuration files (e.g., .vimrc) from config/ to the container's home directory
 ARG USERNAME=ros
