--- a/src/boat_simulator/package.xml
+++ b/src/boat_simulator/package.xml
@@ -11,6 +11,7 @@
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+  <test_depend>python3-matplotlib</test_depend>
 
   <!-- ROS Dependencies -->
   <exec_depend>custom_interfaces</exec_depend>
