--- a/src/network_systems/config/local_transceiver/local_transceiver_template.yaml
+++ b/src/network_systems/config/local_transceiver/local_transceiver_template.yaml
@@ -3,4 +3,4 @@ local_transceiver_node:
   ros__parameters:
     enabled: true
     # The following parameters are optional. Defaults are set in local_transceiver_ros_intf.cpp
-    port: # Integer: Port that the Local Transceiver will use for the server (ex. 8081)
+    port: # String: Serial port that the Local Transceiver will use (default: /tmp/local_transceiver_test_port)
