--- a/src/boat_simulator/package.xml
+++ b/src/boat_simulator/package.xml
@@ -11,6 +11,7 @@
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
+  <test_depend>python3-matplotlib</test_depend>
 
   <!-- ROS Dependencies -->
   <exec_depend>custom_interfaces</exec_depend>
@@ -20,6 +21,7 @@
   <!-- Python Dependencies -->
   <exec_depend>python3-numpy</exec_depend>
   <exec_depend>python3-scipy</exec_depend>
+  <exec_depend>python3-matplotlib</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
