Add linter for website on github test workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,3 +52,18 @@ jobs:
       uses: ./.github/actions/run-in-container/
       with:
         script: 'clang-tidy'
+
+  web-linter:
+    runs-on: ubuntu-latest
+    name: eslint
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+        with:
+          repository: UBCSailbot/${{ github.event.repository.name }}
+      - name: Install node-js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm install
+      - run: npm run format && npm run lint
