Add Eric to CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,8 +8,8 @@
 * @patrick-5546
 
 # boat_simulator
-/notebooks/boat_simulator @DFriend01
-/src/boat_simulator @DFriend01
+/notebooks/boat_simulator @DFriend01 @eomielan
+/src/boat_simulator @DFriend01 @eomielan
 
 # custom_interfaces
 /src/custom_interfaces @UBCSailbot/soft-leads
