--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Build docs
         shell: bash
-        run: docker compose -f .devcontainer/docker-compose.docs.yml exec -T docs /bin/bash -c "mkdocs build"
+        run: docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "mkdocs build"
 
   # https://squidfunk.github.io/mkdocs-material/publishing-your-site/#with-github-actions
   docs-deploy:
