--- a/src/website/package.json
+++ b/src/website/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@mui/x-date-pickers": "^6.19.6",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.12",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "leaflet": "^1.9.4",
