--- a/src/website/tsconfig.json
+++ b/src/website/tsconfig.json
@@ -23,6 +23,12 @@
       }
     ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "hooks/useSessionState.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "hooks/useSessionState.js"
+  ],
   "exclude": ["node_modules"]
 }
