--- a/src/website/package.json
+++ b/src/website/package.json
@@ -8,7 +8,10 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/x-date-pickers": "^6.19.6",
     "@mui/icons-material": "^5.15.10",
