--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -57,10 +57,10 @@ jobs:
           ROOT: './docs/'
 
   # https://squidfunk.github.io/mkdocs-material/publishing-your-site/#with-github-actions
-  docs-deploy:
-    name: Deploy Docs version
+  docs-update:
+    name: Deploy and/or Delete Docs versions
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || github.event.action != 'closed'
+    if: (github.event_name != 'pull_request' || github.event.action != 'closed') || (github.event_name == 'pull_request' && github.event.action == 'closed')
     permissions:
       contents: write
     steps:
@@ -76,11 +76,22 @@ jobs:
         run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.docs.yml up -d
 
       - name: Build docs
+        if: github.event_name != 'pull_request' || github.event.action != 'closed'
         shell: bash
         run: docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "mkdocs build"
 
+      - name: "Delete pr-${{ github.event.number }} version of the Docs"
+        if: github.event_name == 'pull_request' && github.event.action == 'closed'
+        shell: bash
+        run: |
+          docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
+            git fetch && \
+            git config user.name ci-bot && \
+            git config user.email ci-bot@example.com && \
+            mike delete pr-${{ github.event.number }}"
+
       - name: "Deploy pr-${{ github.event.number }} version of the Docs"
-        if: github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request' && github.event.action != 'closed'
         shell: bash
         run: |
           docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
@@ -98,30 +109,3 @@ jobs:
             git config user.name ci-bot && \
             git config user.email ci-bot@example.com && \
             mike deploy --push --update-aliases main latest"
-
-  docs-delete:
-    name: Delete Docs version
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
-    permissions:
-      contents: write
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-        with:
-          # checkout all commits to get accurate page revision times
-          # for the git-revision-date-localized plugin
-          fetch-depth: '0'
-
-      - name: Start containers
-        shell: bash
-        run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.docs.yml up -d
-
-      - name: "Delete pr-${{ github.event.number }} version of the Docs"
-        shell: bash
-        run: |
-          docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
-            git fetch && \
-            git config user.name ci-bot && \
-            git config user.email ci-bot@example.com && \
-            mike delete --push pr-${{ github.event.number }}"
