--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,7 +7,6 @@ on:
   pull_request:
     # default types and closed
     types: [opened, synchronize, reopened, closed]
-  workflow_dispatch:
 
 jobs:
   # https://github.com/nosborn/github-action-markdown-cli
@@ -60,7 +59,6 @@ jobs:
   docs-update:
     name: Deploy and/or Delete Docs versions
     runs-on: ubuntu-latest
-    if: (github.event_name != 'pull_request' || github.event.action != 'closed') || (github.event_name == 'pull_request' && github.event.action == 'closed')
     permissions:
       contents: write
     steps:
@@ -76,7 +74,7 @@ jobs:
         run: docker compose -f .devcontainer/docker-compose.yml -f .devcontainer/docker-compose.docs.yml up -d
 
       - name: Build docs
-        if: github.event_name != 'pull_request' || github.event.action != 'closed'
+        if: github.event_name == 'push' || github.event.action != 'closed'
         shell: bash
         run: docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "mkdocs build"
 
@@ -101,7 +99,7 @@ jobs:
             mike deploy --push pr-${{ github.event.number }}"
 
       - name: Deploy main version of the Docs
-        if: github.ref == 'refs/heads/main' && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         shell: bash
         run: |
           docker compose -f .devcontainer/docker-compose.yml exec -T docs /bin/sh -c "\
